RSRVR-3 graalvm native (#11)
Co-authored-by: Jakub Skoczen <jakub@indexdata.com>