@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -11,6 +12,7 @@
     <vertx.launcher>com.indexdata.reservoir.server.ReservoirLauncher</vertx.launcher>
     <vertx.verticle>com.indexdata.reservoir.server.MainVerticle</vertx.verticle>
     <graal.compiler.dir>${project.build.directory}/compiler</graal.compiler.dir>
+    <main.class>com.indexdata.reservoir.server.Main</main.class>
   </properties>
   <dependencies>
     <dependency>
@@ -96,8 +98,28 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-unit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-junit5</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -109,12 +131,10 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-jul</artifactId>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
@@ -147,10 +167,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
   <build>
     <plugins>
-     <plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>org/folio/okapi/common/logging/FolioLoggingContext.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
         <artifactId>maven-resources-plugin</artifactId>
         <inherited>false</inherited>
         <executions>
@@ -197,9 +225,7 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>${vertx.launcher}</Main-Class>
-                    <Main-Verticle>${vertx.verticle}</Main-Verticle>
-                    <Main-Command>run</Main-Command>
+                    <Main-Class>${main.class}</Main-Class>
                     <Multi-Release>true</Multi-Release>
                   </manifestEntries>
                 </transformer>
@@ -215,11 +241,11 @@
                 <filter>
                   <artifact>*:*</artifact>
                   <excludes>
-                   <exclude>META-INF/*.SF</exclude>
-                   <exclude>META-INF/*.DSA</exclude>
-                   <exclude>META-INF/*.RSA</exclude>
-                 </excludes>
-               </filter>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
               </filters>
             </configuration>
           </execution>
@@ -295,10 +321,10 @@
               <arguments>
                 <argument>--module-path</argument>
                 <!-- automatically creates the modulepath using all project dependencies, also adding the project build directory -->
-                <modulepath />
+                <modulepath/>
                 <argument>-classpath</argument>
                 <!-- automatically creates the classpath using all project dependencies, also adding the project build directory -->
-                <classpath />
+                <classpath/>
                 <argument>-XX:+UnlockExperimentalVMOptions</argument>
                 <argument>-XX:+EnableJVMCI</argument>
                 <argument>--upgrade-module-path=${graal.compiler.dir}</argument>
@@ -317,10 +343,10 @@
               <arguments>
                 <argument>--module-path</argument>
                 <!-- automatically creates the modulepath using all project dependencies, also adding the project build directory -->
-                <modulepath />
+                <modulepath/>
                 <argument>-classpath</argument>
                 <!-- automatically creates the classpath using all project dependencies, also adding the project build directory -->
-                <classpath />
+                <classpath/>
                 <argument>${vertx.launcher}</argument>
                 <argument>run</argument>
                 <argument>${vertx.verticle}</argument>
@@ -350,5 +376,51 @@
       </plugin>
     </plugins>
   </build>
-
+  <profiles>
+    <profile>
+      <id>native</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <version>${graalvm-maven-plugin.version}</version>
+            <extensions>true</extensions>
+            <executions>
+              <execution>
+                <id>build-native</id>
+                <goals>
+                  <goal>compile-no-fork</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+              <execution>
+                <id>test-native</id>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <phase>test</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <imageName>reservoir-native</imageName>
+              <mainClass>${main.class}</mainClass>
+              <skipNativeTests>true</skipNativeTests>
+              <debug>true</debug>
+              <verbose>true</verbose>
+              <quickBuild>true</quickBuild>
+              <buildArgs>
+                <buildArg>--no-fallback</buildArg>
+                <buildArg>-H:ResourceConfigurationFiles=${project.basedir}/resource-config.json</buildArg>
+                <buildArg>-H:ReflectionConfigurationFiles=${project.basedir}/reflection-config.json</buildArg>
+                <buildArg>--enable-url-protocols=https</buildArg>
+                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
+                <buildArg>--enable-native-access=org.graalvm.truffle</buildArg>
+              </buildArgs>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
